--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : About
+title : master's blog
 tagline: Site Tagline
 author :
   name : master
   email : 
   github : crazymaster 
-  twitter : 
+  twitter : ken54ik 
   feedburner : 
 
 # The production_url is only used when full-domain names are needed
