Added google+ profile.

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ author :
   email : 
   github : crazymaster 
   twitter : ken54ik 
+  googleplus : 109378471477960542752
   feedburner : 
 
 # The production_url is only used when full-domain names are needed
