--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 pygments: true
 markdown: redcarpet
 redcarpet:
-  extensions: ["tables",  "autolink",  "strikethrough",  "superscript"]
+  extensions: ["tables", "autolink", "strikethrough", "superscript", "underline"]
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
